@@ -1,5 +1,5 @@
 APPNAME = ejabberd
-VSN = $(shell sed '/VERSION/!d;s/\(.*\)"\(.*\)"\(.*\)/\2/' ../../src/ejabberd.hrl)
+VSN = $(shell sed '/vsn/!d;s/\(.*\)"\(.*\)"\(.*\)/\2/' ../../src/ejabberd.app)
 
 DOCDIR=.
 SRCDIR=../../src
